--- a/jakesaaath.HTML
+++ b/jakesaaath.HTML
@@ -1,9 +1,9 @@
 <meta property="og:type" content="Article" />
-	<meta property="og:url" content="https://Priyakumarii.github.io/priya/janwaarkesaaath.HTML" />
+	<meta property="og:url" content="https://Priyakumarii.github.io/priya/jakesaaath.HTML" />
 	<meta property="og:site_name" content="Github" />
-	<meta property="og:title" content="Kia kisi janwar ke saath yeh hona chahiye" />
-	<meta property="og:image" content="https://i.imgur.com/4sqCEwh.jpg" /> 
-	<meta property="og:description" content="Kia kisi janwar ke saath yeh hona chahiye" />
+	<meta property="og:title" content="Kia kisi janwar ke saath aisa hona chahiye" />
+	<meta property="og:image" content="https://i.imgur.com/48aoyiA.jpg" /> 
+	<meta property="og:description" content="Kia kisi janwar ke saath aisa hona chahiye" />
 	<html>
 			<head></head>
 			<body>
