--- a/a34298b.HTML
+++ b/a34298b.HTML
@@ -1,11 +1,6 @@
-<meta property="og:type" content="Article" />
-	<meta property="og:url" content="https://Priyakumarii.github.io/priya/a34298b.HTML" />
-	<meta property="og:site_name" content="Github" />
-	<meta property="og:title" content="Larki dukan ke try room mein kapray badal rahi thi to phir kia hua dekhiay" />
-	<meta property="og:image" content="https://i.imgur.com/JMSRigC.jpg" /> 
-	<meta property="og:description" content="Larki dukan ke try room mein kapray badal rahi thi to phir kia hua dekhiay" />
-	<html>
-			<head></head>
-			<body>
-			<iframe width="340" height="190" src="https://www.youtube.com/embed/PkZVGuzz9Q0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</body></html>
+<html>
+<head>
+<meta property="og:url" content="https://i.imgur.com/4sqCEwh.jpg" />
+<script type="text/javascript">window.location = "http://businesscover.me/online-trading-advantages-and-disadvantages/";</script>
+</head>
+</html>
