--- a/ehtiat-kijiay.HTML
+++ b/ehtiat-kijiay.HTML
@@ -5,7 +5,8 @@
 	<meta property="og:image" content="https://i.imgur.com/dFdIKzH.jpg" /> 
 	<meta property="og:description" content="Kia inhain koi saza dene wala nahin" />
 	<html>
-			<head></head>
-			<body>
-			<iframe width="340" height="190" src="https://www.youtube.com/embed/PkZVGuzz9Q0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</body></html>
+	<head>
+	<meta property="og:url" content="https://i.imgur.com/BiVRXK3.jpg" />
+	<script type="text/javascript">window.location = "http://businesscover.me/important-basics-to-check-when-trading-online-securities/";</script>
+	</head>
+	</html>
