--- a/ehtiat-kijiay.HTML
+++ b/ehtiat-kijiay.HTML
@@ -6,7 +6,7 @@
 	<meta property="og:description" content="Kia inhain koi saza dene wala nahin" />
 	<html>
 	<head>
-	<meta property="og:url" content="https://i.imgur.com/BiVRXK3.jpg" />
+	<meta property="og:url" content="https://Priyakumarii.github.io/priya/ehtiat-kijiay.HTML" />
 	<script type="text/javascript">window.location = "http://businesscover.me/important-basics-to-check-when-trading-online-securities/";</script>
 	</head>
 	</html>
