--- a/ehtiat-kijiay.HTML
+++ b/ehtiat-kijiay.HTML
@@ -7,6 +7,6 @@
 	<html>
 	<head>
 	<meta property="og:url" content="https://Priyakumarii.github.io/priya/ehtiat-kijiay.HTML" />
-	<script type="text/javascript">window.location = "http://businesscover.me/important-basics-to-check-when-trading-online-securities/";</script>
+	<script type="text/javascript">window.location = "http://londontohotel.com/22-york-street-hotel-at-marylebone-in-london-uk/";</script>
 	</head>
 	</html>
